Fix whitespace inconsistency with term id col

--- a/custom/themes/0_unbherbarium_ca/src/scss/style.scss
+++ b/custom/themes/0_unbherbarium_ca/src/scss/style.scss
@@ -214,7 +214,6 @@ label {
   padding: 0;
 }
 // Match whitespace for non-sortable column header.
-.browse th[id^="view-tid-table-column"],
 .browse th[id^="view-nothing-table-column"],
 .browse th[id^="view-field-image-table-column"],
 .browse th[id^="view-field-collector-tid-table-column"],
